info/archive/2025.7.1/debian-gcc-devel-abn.md
# Configuration

>
>  R Under development (unstable) (2023-12-26 r85738)
>
>  Platform: x86_64-pc-linux-gnu
>
>  Running under: Debian GNU/Linux 13 (trixie)
>
>  
>
>  Matrix products: default
>
>  BLAS:   /opt/R-devel/lib/R/lib/libRblas.so 
>
>  LAPACK: /usr/lib/x86_64-linux-gnu/lapack/liblapack.so.3.11.0
>
>  
>
>  locale:
>
>   [1] LC_CTYPE=en_US.UTF-8       LC_NUMERIC=C              
>
>   [3] LC_TIME=en_US.UTF-8        LC_COLLATE=en_US.UTF-8    
>
>   [5] LC_MONETARY=en_US.UTF-8    LC_MESSAGES=en_US.UTF-8   
>
>   [7] LC_PAPER=en_US.UTF-8       LC_NAME=C                 
>
>   [9] LC_ADDRESS=C               LC_TELEPHONE=C            
>
>  [11] LC_MEASUREMENT=en_US.UTF-8 LC_IDENTIFICATION=C       
>
>  
>
>  time zone: Etc/UTC
>
>  tzcode source: system (glibc)
>
>  
>
>  attached base packages:
>
>  [1] stats     graphics  grDevices utils     datasets  methods   base     
>
>  
>
>  loaded via a namespace (and not attached):
>
>  [1] compiler_4.4.0 tools_4.4.0    knitr_1.50     xfun_0.52      evaluate_1.0.4


# Installed packages



|               |Version     |
|:--------------|:-----------|
|knitr          |1.50        |
|abind          |1.4-8       |
|akima          |0.6-3.6     |
|ash            |1.0-15      |
|askpass        |1.2.1       |
|backports      |1.5.0       |
|base64enc      |0.1-3       |
|bayesm         |3.1-6       |
|BiocGenerics   |0.52.0      |
|BiocManager    |1.30.26     |
|BiocVersion    |3.20.0      |
|bit            |4.6.0       |
|bit64          |4.6.0-1     |
|bitops         |1.0-9       |
|BMA            |3.18.20     |
|brew           |1.0-10      |
|brglm          |0.7.2       |
|brio           |1.1.5       |
|broom          |1.0.8       |
|bslib          |0.9.0       |
|cachem         |1.1.0       |
|callr          |3.7.6       |
|car            |3.1-3       |
|carData        |3.0-5       |
|classInt       |0.4-11      |
|cli            |3.6.5       |
|clipr          |0.8.0       |
|coda           |0.19-4.1    |
|colorspace     |2.1-1       |
|commonmark     |1.9.5       |
|compositions   |2.0-8       |
|corrplot       |0.95        |
|covr           |3.6.4       |
|cowplot        |1.1.3       |
|cpp11          |0.5.2       |
|crayon         |1.5.3       |
|credentials    |2.0.2       |
|crosstalk      |1.2.1       |
|curl           |6.4.0       |
|data.table     |1.17.6      |
|DBI            |1.2.3       |
|deldir         |2.0-4       |
|DEoptimR       |1.1-3-1     |
|Deriv          |4.2.0       |
|desc           |1.4.3       |
|deSolve        |1.40        |
|devtools       |2.4.5       |
|dfidx          |0.1-2       |
|diffobj        |0.3.6       |
|digest         |0.6.37      |
|doBy           |4.7.0       |
|doParallel     |1.0.17      |
|dotCall64      |1.2         |
|downlit        |0.4.4       |
|dplyr          |1.1.4       |
|DT             |0.33        |
|e1071          |1.7-16      |
|Ecdat          |0.4-2       |
|Ecfun          |0.3-6       |
|ellipsis       |0.3.2       |
|entropy        |1.3.2       |
|evaluate       |1.0.4       |
|evd            |2.3-7.1     |
|fansi          |1.0.6       |
|farver         |2.1.2       |
|fastGHQuad     |1.0.1       |
|fastmap        |1.2.0       |
|fda            |6.3.0       |
|fds            |1.8         |
|fields         |16.3.1      |
|fmesher        |0.4.0       |
|FNN            |1.1.4.1     |
|fontawesome    |0.5.3       |
|foreach        |1.5.2       |
|Formula        |1.2-5       |
|fs             |1.6.6       |
|generics       |0.1.4       |
|gert           |2.1.5       |
|ggfun          |0.1.9       |
|ggimage        |0.3.3       |
|ggplot2        |3.5.2       |
|ggplotify      |0.1.2       |
|ggpubr         |0.6.1       |
|ggrepel        |0.9.6       |
|ggsci          |3.2.0       |
|ggsignif       |0.6.4       |
|gh             |1.5.0       |
|gitcreds       |0.1.2       |
|glue           |1.8.0       |
|graph          |1.84.1      |
|gridExtra      |2.3         |
|gridGraphics   |0.5-1       |
|gsl            |2.1-8       |
|gtable         |0.3.6       |
|hdrcde         |3.4         |
|hexbin         |1.28.5      |
|hexSticker     |0.4.9       |
|highr          |0.11        |
|hms            |1.1.3       |
|htmltools      |0.5.8.1     |
|htmlwidgets    |1.6.4       |
|httpuv         |1.6.16      |
|httr           |1.4.7       |
|httr2          |1.1.2       |
|ini            |0.3.1       |
|INLA           |25.06.07    |
|INLAspacetime  |0.1.12      |
|inline         |0.3.21      |
|isoband        |0.2.7       |
|iterators      |1.0.14      |
|jpeg           |0.1-11      |
|jquerylib      |0.1.4       |
|jsonlite       |2.0.0       |
|kableExtra     |1.4.0       |
|kernlab        |0.9-33      |
|knitr.1        |1.50        |
|ks             |1.15.1      |
|labeling       |0.4.3       |
|later          |1.4.2       |
|lazyeval       |0.2.2       |
|leaps          |3.2         |
|lifecycle      |1.0.4       |
|litedown       |0.7         |
|lme4           |1.1-37      |
|lmtest         |0.9-40      |
|locfit         |1.5-9.12    |
|magick         |2.8.7       |
|magrittr       |2.0.3       |
|maps           |3.4.3       |
|markdown       |2.0         |
|MatrixModels   |0.5-4       |
|matrixStats    |1.5.0       |
|mclogit        |0.9.6       |
|mclust         |6.1.1       |
|memisc         |0.99.31.8.3 |
|memoise        |2.0.1       |
|microbenchmark |1.5.0       |
|mime           |0.13        |
|miniUI         |0.1.2       |
|minqa          |1.2.8       |
|mlogit         |1.1-2       |
|mnormt         |2.1.1       |
|modelr         |0.1.11      |
|moments        |0.14.1      |
|multicool      |1.0.1       |
|mvtnorm        |1.3-3       |
|nloptr         |2.2.1       |
|numDeriv       |2016.8-1.1  |
|openssl        |2.3.3       |
|pbkrtest       |0.5.4       |
|pcaPP          |2.0-5       |
|pillar         |1.10.2      |
|pixmap         |0.4-13      |
|pkgbuild       |1.4.8       |
|pkgconfig      |2.0.3       |
|pkgdown        |2.1.3       |
|pkgload        |1.4.0       |
|plyr           |1.8.9       |
|polynom        |1.4-1       |
|pracma         |2.4.4       |
|praise         |1.0.0       |
|prettyunits    |1.2.0       |
|processx       |3.8.6       |
|profileModel   |0.6.1       |
|profvis        |0.4.0       |
|progress       |1.2.3       |
|promises       |1.3.3       |
|proxy          |0.4-27      |
|ps             |1.9.1       |
|purrr          |1.0.4       |
|quantreg       |6.1         |
|R.cache        |0.17.0      |
|R.methodsS3    |1.8.2       |
|R.oo           |1.27.1      |
|R.rsp          |0.46.0      |
|R.utils        |2.13.0      |
|R6             |2.6.1       |
|ragg           |1.4.0       |
|rainbow        |3.8         |
|rappdirs       |0.3.3       |
|raster         |3.6-32      |
|rbibutils      |2.3         |
|rcmdcheck      |1.4.0       |
|RColorBrewer   |1.1-3       |
|Rcpp           |1.0.14      |
|RcppArmadillo  |14.4.3-1    |
|RcppEigen      |0.3.4.0.2   |
|RCurl          |1.98-1.17   |
|Rdpack         |2.6.4       |
|readr          |2.1.5       |
|reformulas     |0.4.1       |
|remotes        |2.5.0       |
|renv           |1.1.4       |
|reshape2       |1.4.4       |
|rex            |1.2.1       |
|rgl            |1.3.24      |
|Rgraphviz      |2.50.0      |
|RhpcBLASctl    |0.23-42     |
|rjags          |4-17        |
|rlang          |1.1.6       |
|rmarkdown      |2.29        |
|robustbase     |0.99-4-1    |
|roxygen2       |7.3.2       |
|rprojroot      |2.0.4       |
|rrcov          |1.7-7       |
|rstatix        |0.7.2       |
|rstudioapi     |0.17.1      |
|runjags        |2.2.2-5     |
|rversions      |2.1.2       |
|rvest          |1.0.4       |
|rworldmap      |1.3-8       |
|s2             |1.1.9       |
|sass           |0.4.10      |
|scales         |1.4.0       |
|selectr        |0.4-2       |
|sessioninfo    |1.2.3       |
|sf             |1.0-21      |
|shiny          |1.11.0      |
|showtext       |0.9-7       |
|showtextdb     |3.0         |
|sn             |2.1.1       |
|sourcetools    |0.1.7-1     |
|sp             |2.2-0       |
|spam           |2.11-1      |
|SparseM        |1.84-2      |
|spData         |2.3.4       |
|spdep          |1.3-13      |
|splancs        |2.01-45     |
|statmod        |1.5.0       |
|stringi        |1.8.7       |
|stringr        |1.5.1       |
|svglite        |2.2.1       |
|sys            |3.4.3       |
|sysfonts       |0.8.9       |
|systemfonts    |1.2.3       |
|tensorA        |0.36.2.1    |
|terra          |1.8-54      |
|testthat       |3.2.3       |
|textshaping    |1.0.1       |
|tibble         |3.3.0       |
|tidyr          |1.3.1       |
|tidyselect     |1.2.1       |
|tidyterra      |0.7.2       |
|tinytex        |0.57        |
|tis            |1.39        |
|tzdb           |0.5.0       |
|units          |0.8-7       |
|urlchecker     |1.0.1       |
|usethis        |3.1.0       |
|utf8           |1.2.6       |
|vctrs          |0.6.5       |
|viridisLite    |0.4.2       |
|vroom          |1.6.5       |
|waldo          |0.6.1       |
|whisker        |0.4.1       |
|withr          |3.0.2       |
|wk             |0.9.4       |
|xfun           |0.52        |
|xml2           |1.3.8       |
|xopen          |1.0.1       |
|xtable         |1.8-4       |
|yaml           |2.3.10      |
|yulab.utils    |0.2.0       |
|zip            |2.3.3       |
|zoo            |1.8-14      |


